--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,26 @@ jobs:
 
       - name: Build and push container
         run: |
-          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny
+          echo "Starting build..."
+          # Submit build asynchronously to avoid log streaming permission errors
+          BUILD_ID=$(gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny --async --format='value(id)')
+          echo "Build submitted with ID: $BUILD_ID"
+          
+          # Poll for build completion
+          while true; do
+            STATUS=$(gcloud builds describe $BUILD_ID --format='value(status)')
+            echo "Current build status: $STATUS"
+            
+            if [[ "$STATUS" == "SUCCESS" ]]; then
+              echo "Build completed successfully!"
+              break
+            elif [[ "$STATUS" == "FAILURE" || "$STATUS" == "CANCELLED" || "$STATUS" == "TIMEOUT" ]]; then
+              echo "Build failed with status: $STATUS"
+              exit 1
+            fi
+            
+            sleep 10
+          done
 
       - name: Deploy to Cloud Run
         run: |
