--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Prepare coverage directory
         run: |
           mkdir -p coverage/html
-          touch coverage/clover.xml
+          # Remove any existing clover.xml to ensure fresh generation
+          rm -f coverage/clover.xml
           chmod -R 777 coverage
           echo "Coverage directory prepared:"
           ls -la coverage/
@@ -89,19 +90,49 @@ jobs:
           
           # Try generating clover.xml first (before HTML) to avoid any conflicts
           echo "Step 1: Generating clover.xml only..."
-          ./vendor/bin/phpunit \
-            --coverage-clover coverage/clover.xml \
-            --coverage-filter "$(pwd)/src" \
-            --log-junit coverage/junit.xml 2>&1 | tail -30
+          # Ensure file doesn't exist before running
+          rm -f coverage/clover.xml
           
+          # Try WITHOUT --coverage-filter first (rely on phpunit.xml source config)
+          echo "Attempting without --coverage-filter (using phpunit.xml source config)..."
+          ./vendor/bin/phpunit --coverage-clover coverage/clover.xml 2>&1 | tail -20
+          
+          # Check if it worked
           if [ -f coverage/clover.xml ] && [ -s coverage/clover.xml ]; then
-            echo "✅ Clover XML generated successfully!"
-            ls -lh coverage/clover.xml
+            echo "✅ Clover XML generated without --coverage-filter!"
           else
-            echo "⚠️ Clover XML not generated or empty, trying alternative..."
-            # Try with absolute path
-            CLOVER_PATH="$(pwd)/coverage/clover.xml"
-            ./vendor/bin/phpunit --coverage-clover "$CLOVER_PATH" --coverage-filter "$(pwd)/src" 2>&1 | tail -20
+            echo "Trying WITH --coverage-filter..."
+            rm -f coverage/clover.xml
+            ./vendor/bin/phpunit \
+              --coverage-clover coverage/clover.xml \
+              --coverage-filter "$(pwd)/src" \
+              --verbose 2>&1 | grep -i -E "(coverage|clover|writing|error)" || true
+          fi
+          
+          # Check immediately after
+          sleep 1
+          if [ -f coverage/clover.xml ]; then
+            FILE_SIZE=$(stat -f%z coverage/clover.xml 2>/dev/null || stat -c%s coverage/clover.xml 2>/dev/null || echo "0")
+            echo "Clover XML file size: $FILE_SIZE bytes"
+            if [ "$FILE_SIZE" -gt 100 ]; then
+              echo "✅ Clover XML generated successfully with content!"
+              ls -lh coverage/clover.xml
+              head -5 coverage/clover.xml
+            else
+              echo "⚠️ Clover XML exists but is too small ($FILE_SIZE bytes), trying alternative..."
+              # Try with absolute path and ensure directory exists
+              rm -f coverage/clover.xml
+              CLOVER_PATH="$(pwd)/coverage/clover.xml"
+              echo "Using absolute path: $CLOVER_PATH"
+              ./vendor/bin/phpunit --coverage-clover "$CLOVER_PATH" --coverage-filter "$(pwd)/src" 2>&1 | tail -20
+              sleep 1
+              if [ -f "$CLOVER_PATH" ]; then
+                NEW_SIZE=$(stat -f%z "$CLOVER_PATH" 2>/dev/null || stat -c%s "$CLOVER_PATH" 2>/dev/null || echo "0")
+                echo "New file size: $NEW_SIZE bytes"
+              fi
+            fi
+          else
+            echo "❌ Clover XML file was not created at all"
           fi
           
           # Now generate HTML coverage
@@ -134,34 +165,16 @@ jobs:
           echo "Checking for coverage files..."
           ls -la coverage/ || true
           
-          if [ ! -f coverage/clover.xml ]; then
-            echo "❌ Coverage file (clover.xml) was not generated!"
-            echo "Debugging coverage generation..."
-            
-            # Check if HTML was generated (proves coverage ran)
-            if [ -d coverage/html ] && [ "$(ls -A coverage/html)" ]; then
-              echo "HTML coverage was generated, but clover.xml was not"
-              echo "This suggests PHPUnit generated coverage but clover output failed"
-            fi
-            
-            # Try alternative: generate clover separately with absolute path
-            echo "Attempting to generate clover.xml separately with absolute path..."
-            XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover "$(pwd)/coverage/clover.xml"
-            
-            # If that doesn't work, try with relative path and explicit test directory
-            if [ ! -f coverage/clover.xml ]; then
-              echo "Trying with relative path and explicit test directory..."
-              XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover coverage/clover.xml tests/
-            fi
-            
-            if [ ! -f coverage/clover.xml ]; then
-              echo "❌ Failed to generate clover.xml after retry"
-              echo "Checking PHPUnit version and capabilities..."
-              ./vendor/bin/phpunit --version
-              ./vendor/bin/phpunit --help | grep -i coverage || true
-              echo "This might indicate an issue with PHPUnit clover output or file permissions"
-              exit 1
-            fi
+          # Final check
+          if [ ! -f coverage/clover.xml ] || [ ! -s coverage/clover.xml ]; then
+            echo "❌ Clover XML is still missing or empty after all attempts"
+            echo "This appears to be a PHPUnit 10.5.58 issue with clover output"
+            echo "HTML coverage was generated successfully, proving:"
+            echo "  - Xdebug is working"
+            echo "  - Coverage collection is working"  
+            echo "  - Source files are being found"
+            echo "  - Only clover.xml output format is failing"
+            exit 1
           fi
           
           echo "✅ Coverage file generated successfully"
